--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -10,7 +10,7 @@
   </tr>
 </table>
 　
-<div class='row'>
+<div>
   <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block edit_user_#{user.id}" do %>
     <i class="fas fa-user-cog"></i>
   <% end %>
