--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,10 @@
-<h2>User info</h2>
-<%= render 'info', user: current_user %>
+<div class='container px-5 px-sm-0'>
+  <h2>User info</h2>
+  <%= render 'info', user: current_user %>
 
-<h2 class="mt-3">New book</h2>
-<%= render 'books/form', book: @book %>
+  <h2 class="mt-3">New book</h2>
+  <%= render 'books/form', book: @book %>
 
-<h2>Users</h2>
-<%= render 'index',users: @users %>
-
+  <h2>Users</h2>
+  <%= render 'index',users: @users %>
+</div>
