--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -25,7 +25,7 @@
           </li>
           <li>
             <%= link_to destroy_user_session_path, method: :delete,class: 'nav-link text-light' do %>
-              <i class="fas fa-sign-out-alt"></i> log out
+              <i class="fas fa-sign-out-alt"></i> logout
             <% end %>
           </li>
         <% else %>
@@ -39,17 +39,19 @@
               <i class="fas fa-link"></i> about
             <% end %>
           </li>
-          <li>
-            <%= link_to new_user_registration_path,class: 'nav-link text-light' do %>
-              <i class="fas fa-user-plus"></i> signup
+            <% unless user_signed_in? %>
+              <li>
+                <%= link_to new_user_registration_path,class: 'nav-link text-light' do %>
+                  <i class="fas fa-user-plus"></i> sign up
+                <% end %>
+              </li>
+              <li>
+                <%= link_to new_user_session_path ,class: 'nav-link text-light' do %>
+                  <i class="fas fa-sign-in-alt"></i> login
+                <% end %>
+              </li>
             <% end %>
-          </li>
-          <li>
-            <%= link_to new_user_session_path ,class: 'nav-link text-light' do %>
-              <i class="fas fa-sign-in-alt"></i> login
-            <% end %>
-          </li>
-        <% end %>
+          <% end %>
         </ul>
       </div>
     </div>
