--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,6 +16,8 @@
         </td>
         <td><%= link_to book.title,book, class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
+        <td id="favorite_button-<%= book.id %>"><%= render 'favorites/favorite_button', book: book %></td>
+        <td>コメント数<%= [*1..5].sample %></td>
       </tr>
     <% end %>
   </tbody>
